--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-router-dom": "^5.1.5",
     "@types/uuid": "^8.3.0",
     "@types/yup": "^0.29.7",
+    "axios": "^0.20.0",
     "express": "^4.17.1",
     "gh-pages": "^3.1.0",
     "node-sass": "^4.14.1",
